src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>IncapsulateDCM__ADDRESS_ID__c</fullName>
        <label>Address ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ADDRNUMSUFFIX__c</fullName>
        <label>Address Number Suffix</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ADDRNUM__c</fullName>
        <label>Address Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ALIASNAME__c</fullName>
        <label>Address Alias Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ANC__c</fullName>
        <label>ANC</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__CITY__c</fullName>
        <label>City</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__Cluster__c</fullName>
        <label>Cluster</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__FULLADDRESS__c</fullName>
        <label>Full Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__FULLINTERSECTION__c</fullName>
        <label>Full Intersection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__INTERSECTIONID__c</fullName>
        <label>Intersection ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__LATITUDE__c</fullName>
        <label>Latitude</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__LONGITUDE__c</fullName>
        <label>Longitude</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__MARID__c</fullName>
        <label>MAR ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__NATIONALGRID__c</fullName>
        <label>National Grid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__POLDIST__c</fullName>
        <label>Police District</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__QUADRANT__c</fullName>
        <label>Quadrant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__REFX__c</fullName>
        <label>Ref X</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__REFY__c</fullName>
        <label>Ref Y</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ROADWAYSEGID__c</fullName>
        <label>Road Way Seg ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__STATE__c</fullName>
        <label>State</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__STNAME__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__STREET_TYPE__c</fullName>
        <label>Street Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__WARD__c</fullName>
        <label>Ward</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__XCOORD__c</fullName>
        <label>X Coordinate</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__YCOORD__c</fullName>
        <label>Y Coordinate</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncapsulateDCM__ZIPCODE__c</fullName>
        <label>Zipcode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MotorolaUserId__c</fullName>
        <label>MotorolaUserId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Contact_Source__c</fullName>
        <label>Contact Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Image_Url__c</fullName>
        <label>Facebook Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Picture__c</fullName>
        <formula>HYPERLINK(sf4twitter__Fcbk_Profile_Url__c,
IF( ( NOT( ISBLANK( sf4twitter__Fcbk_Image_Url__c  ) )), IMAGE( sf4twitter__Fcbk_Image_Url__c  ,sf4twitter__Fcbk_Profile_Url__c, 48, 48), sf4twitter__Fcbk_Profile_Url__c )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Profile_Url__c</fullName>
        <label>Facebook Profile Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Facebook User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Username__c</fullName>
        <label>Facebook Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Follow_Status__c</fullName>
        <description>Click on link to change following status</description>
        <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFollow?cid=&apos; + Id + &apos;&quot; + ( ( (new RegExp(&quot;[\\?&amp;]isdtp=([^&amp;#]*)&quot;)).exec(window.location.href) == null )?&quot;&quot;: &quot;&amp;isdtp=vw&quot;) &apos;, 
IF(sf4twitter__followed__c == true,&apos;Yes&apos;, &apos;No&apos; ), 
&apos;_self&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click on link to change following status</inlineHelpText>
        <label>Following On Twitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Influencer_Type__c</fullName>
        <label>Influencer Type</label>
        <picklist>
            <controllingField>sf4twitter__Influencer__c</controllingField>
            <picklistValues>
                <fullName>Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Influencer__c</fullName>
        <inlineHelpText>Is this Contact an Influencer (ie Reporter?)</inlineHelpText>
        <label>Influencer</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Number__c</fullName>
        <label>Klout Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score__c</fullName>
        <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klout Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Research_this_Contact__c</fullName>
        <formula>HYPERLINK(&quot;http://www.linkedin.com/pub/dir/&quot; &amp;  FirstName  &amp; &quot;/&quot; &amp;  LastName, IMAGE(&quot;/resource/linkedin&quot;, &quot;Lookup Contact on LinkedIn&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Research This Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Bio__c</fullName>
        <label>Twitter Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Creation_Date__c</fullName>
        <label>Twitter Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Follower_Count__c</fullName>
        <label>Twitter Follower Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Following_count__c</fullName>
        <label>Twitter Following Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Image_Url__c</fullName>
        <label>Twitter Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Last_Tweet__c</fullName>
        <label>Twitter Last Tweet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Location__c</fullName>
        <label>Twitter Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Picture__c</fullName>
        <formula>HYPERLINK(&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c,
IF( ( NOT( ISBLANK( sf4twitter__Twitter_Image_Url__c ) )), IMAGE( sf4twitter__Twitter_Image_Url__c ,&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, 48, 48), 
IF( NOT( ISBLANK( sf4twitter__Twitter_Username__c ) ), &apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, &apos;&apos; ) )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Status_count__c</fullName>
        <label>Twitter Status Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Twitter User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__followed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the user is being followed by any account</description>
        <label>Followed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>